--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "7.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-normalize": "^0.4.4",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
